exercise-3.3/httproute-log-output.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-output-route
spec:
  parentRefs:
  - name: app-gateway
    sectionName: http
  hostnames:
  - "*"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: log-output-service
      port: 80
