exercise-3.3/httproute-pingpong.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pingpong-route
spec:
  parentRefs:
  - name: app-gateway
    sectionName: http
  hostnames:
  - "*"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    backendRefs:
    - name: pingpong-service
      port: 80
